Fix z-index of anchor buttons on Community Partner page.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2437,7 +2437,7 @@ small {
   top: 0;
   right: 30px;
   padding: 20px;
-  z-index: 0;
+  z-index: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   display: block; }
